test/ppx_irmin/deriver/errors/unsupported_type_arrow.ml
type t = unit -> int [@@deriving irmin]
